--- a/lesson1/main.html
+++ b/lesson1/main.html
@@ -14,6 +14,7 @@
     <!-- <script src="./sikls.js"></script> -->
     <!-- <script src="./homework2.js"></script> -->
     <!-- <script src="./func.js"></script> -->
-    <script src="./smethods.js"></script>
+    <!-- <script src="./smethods.js"></script> -->
+    <script src="./homework3.js"></script>
 </body>
 </html>
