--- a/lesson1/main.html
+++ b/lesson1/main.html
@@ -15,6 +15,9 @@
     <!-- <script src="./homework2.js"></script> -->
     <!-- <script src="./func.js"></script> -->
     <!-- <script src="./smethods.js"></script> -->
-    <script src="./homework3.js"></script>
+    <!-- <script src="./homework3.js"></script> -->
+    <!-- <script src="./callback.js"></script> -->
+    <!-- <script src="./objects.js"></script> -->
+    <script src="./massivlar.js"></script>
 </body>
 </html>
