--- a/lesson1/main.html
+++ b/lesson1/main.html
@@ -18,6 +18,8 @@
     <!-- <script src="./homework3.js"></script> -->
     <!-- <script src="./callback.js"></script> -->
     <!-- <script src="./objects.js"></script> -->
-    <script src="./massivlar.js"></script>
+    <!-- <script src="./massivlar.js"></script> -->
+    <!-- <script src="./clonlash.js"></script> -->
+    <script src="./spread.js"></script>
 </body>
 </html>
