--- a/lesson1/main.html
+++ b/lesson1/main.html
@@ -20,6 +20,7 @@
     <!-- <script src="./objects.js"></script> -->
     <!-- <script src="./massivlar.js"></script> -->
     <!-- <script src="./clonlash.js"></script> -->
-    <script src="./spread.js"></script>
+    <!-- <script src="./spread.js"></script> -->
+    <script src="./oop.js"></script>
 </body>
 </html>
