--- a/lesson1/main.html
+++ b/lesson1/main.html
@@ -21,6 +21,9 @@
     <!-- <script src="./massivlar.js"></script> -->
     <!-- <script src="./clonlash.js"></script> -->
     <!-- <script src="./spread.js"></script> -->
-    <script src="./oop.js"></script>
+    <!-- <script src="./oop.js"></script> -->
+    <!-- <script src="./homework4.js"></script> -->
+    <!-- <script src="./dinamic_typing.js"></script> -->
+    <script src="./dom.js"></script>
 </body>
 </html>
