--- a/samar_ustoz/dom/index.html
+++ b/samar_ustoz/dom/index.html
@@ -30,6 +30,7 @@
       </div>
     </div>
 
-    <script src="./js/script.js"></script>
+    <!-- <script src="./js/script.js"></script> -->
+    <script src="./js/actions.js"></script>
   </body>
 </html>
