--- a/samar_ustoz/asyncio/main.html
+++ b/samar_ustoz/asyncio/main.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
 </head>
 <body>
     
-    <button data-current="5">Natija 5</button>
+    <p>Hello world</p>
+    <p>I am python coder</p>
 
-    <div class="main">
-        <div id="btn"></div>
-    </div>
     <script src="./main.js"></script>
 </body>
 </html>
