--- a/debuggers/main.html
+++ b/debuggers/main.html
@@ -6,11 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hello world</h1>
+    <script src="../debuggers/main.js"></script>
     
-    <p>Hello world</p>
-    <h1>I am python coder</h1>
-
-    <script defer src="./main.js"></script>
-    <script async src="./second.js"></script>
 </body>
 </html>
